# axmol-migrate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  config.h.in  main.cpp  shader-migrate-ast.cpp  shader-migrate.cpp
.github/workflows/: CI.yml  c-cpp.yml  test.yml
1k/: manifest.ps1
base/: axstd.h  posix_io.h
